# bevymon_ranger

./: Cargo.toml  LICENSE-Apache-2.0.txt  LICENSE-MIT.txt  README.md
assets/: long_bullet.ase  overworld.ldtk  round_bullet.ase
src/: camera.rs  capture.rs  creature.rs  lib.rs  main.rs  movement.rs  overworld.rs  player.rs  ui.rs
src/capture/: math.rs  ui.rs
src/creature/: behavior.rs  types.rs
src/devtools/: debug.rs  mod.rs
src/overworld/: player.rs
src/ui/: capture.rs
