[package]
name = "bevymon_ranger"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# Replace this with `bevy = "0.13"` when compiling a release build.
bevy = { version = "0.16", features = ["dynamic_linking"] }
bevy-inspector-egui = { version = "0.31", optional = true}
bevy_simple_screen_boxing = "0.1.1"
bevy_ecs_ldtk = "0.12.0"
avian2d = "0.3"

[features]
devtools = ["egui_inspector", ]
egui_inspector = ["dep:bevy-inspector-egui"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
